--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,8 +21,6 @@
     <string name="phone_number">Phone Number</string>
     <string name="continue_text">Continue</string>
     <string name="title_activity_home">HomeActivity</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
@@ -37,4 +35,9 @@
     <string name="menu_gallery">Gallery</string>
     <string name="menu_exit">Sign Out</string>
     <string name="msg_token_fmt" />
+
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="your_web_client_id">319310297783-pi682lf0pgvgr28rcv45dlr6pima6oa2.apps.googleusercontent.com</string>
 </resources>
